--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,1 +1,27 @@
+pipeline {
+    agent {label 'aws'}
 
+    stages {
+        stage('preparation') {
+            steps {
+            git 'https://github.com/radwanabil/Booster_CI_CD_Project.git'
+            }
+
+        }
+        
+        
+         stage('docker build') {
+              steps {
+                  withCredentials([usernamePassword(credentialsId: 'dockerhub', usernameVariable: 'USERNAME', passwordVariable: 'PASSWORD')]) {
+                sh """
+                docker build . -f dockerfile -t radwa98/sprints_jenkins_django:latest
+                docker login -u ${USERNAME} -p ${PASSWORD}
+                docker push radwa98/sprints_jenkins_django:latest
+                """
+
+            }
+
+        }
+    }
+}
+}
