--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -27,6 +27,6 @@ jobs:
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
         run: |
-          docker . -f dockerfile -t radwa98/sprints_jenkins_django:latest
+          docker build . -f dockerfile -t radwa98/sprints_jenkins_django:latest
           docker login -u ${{ secrets.DOCKERHUBUSERNAME }} -p ${{ secrets.DOCKERHUBPASS }}
           
